--- a/index.html
+++ b/index.html
@@ -5,12 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>my first website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
-    <h2>hello shopnil</h2>
-    <p>hgagfh</p>
-    <p>jhafhduhf</p>
-    
+<div id="div1">
+    <h1>my name is shopnil</h1>
+</div>
 </body>
 </html>
