--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div id="div1">
-    <h1>my name is shopnil</h1>
+<div>
+    <h1 id="titel" >my name is shopnil</h1>
+
 </div>
 </body>
 </html>
