--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <div>
     <h1 id="titel" >my name is shopnil</h1>
     <img src="1.jpg" alt="ariyana">
-
+    <img src="Screenshot.png" alt="ariyaa">
 </div>
 </body>
 </html>
