--- a/index.html
+++ b/index.html
@@ -8,10 +8,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div>
-    <h1 id="titel" >my name is shopnil</h1>
-    <img src="1.jpg" alt="ariyana">
-    <img src="Screenshot.png" alt="ariyaa">
-</div>
+<h1>hello im shoipnil</h1>
+<p>welcome to my website</p>
+<p>im a web devoloper</p>
+<p>i love sjjamiha</p>
 </body>
 </html>
