add new pic and some div

--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
 <p>welcome to my website</p>
 <p>im a web devoloper</p>
 <p>i love sjjamiha</p>
+<img src="1.jpg" alt="ariyana">
+<img src="2.png" alt="ariyana hot">
+<div id="about-love">
+    <p>i love samijjha</p>
+    <p>i can play with girls</p>
+    <p>i can teach you</p>
+</div>
+<div id="lorem">
+    Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati hic cum consectetur recusandae aliquam facere corporis aliquid cumque voluptas. Voluptatibus ea necessitatibus totam, numquam delectus optio impedit perspiciatis facere aspernatur atque nulla dolor nobis saepe corporis similique, unde suscipit ipsa nemo consequatur a ut culpa maxime aliquam! Ducimus corrupti voluptas veniam est natus similique dolorem saepe animi! Minima quasi facere ipsum optio at vitae voluptates fugiat quod ipsam, quam possimus incidunt nihil quaerat debitis vero exercitationem provident, expedita unde. Dolor esse voluptatibus beatae quas iste qui at molestiae ratione unde accusantium eos facere, voluptate natus, adipisci rerum ex. Eligendi perspiciatis labore rerum, porro, totam laborum veritatis tenetur alias ipsum, autem nesciunt laboriosam quas officiis deleniti commodi assumenda illo a mollitia dolor id sunt magnam obcaecati? Eos iusto delectus consectetur natus tenetur impedit praesentium est quas ad accusantium nemo ratione voluptate quidem modi distinctio eligendi harum consequatur rerum blanditiis, sed ducimus hic molestias earum? Beatae aut eligendi blanditiis excepturi molestiae cum quo voluptas recusandae corporis soluta? Aspernatur nesciunt voluptatem ullam, eos porro iure iste ab fugit inventore nisi temporibus soluta minima officia pariatur et autem optio alias laborum a dolores. Eos soluta eveniet explicabo eius consequuntur, perferendis accusantium animi doloremque in?
+</div>
 </body>
 </html>
